# P-AKA-DSN

./: README.md  hostInterface.sh
amf-refactor/amf-kamf/: Dockerfile
amf-refactor/amf-kamf/deployment/: 01_multus.yaml  02_deployment.yaml
amf-refactor/amf-kamf/src/: CMakeLists.txt  main.cpp
amf-refactor/amf-knas/: Dockerfile
amf-refactor/amf-knas/deployment/: 01_multus.yaml  02_deployment.yaml
amf-refactor/amf-knas/src/: CMakeLists.txt  main.cpp
ausf-refactor/ausf-all/: Dockerfile
ausf-refactor/ausf-all/deployment/: 01_multus.yaml  02_deployment.yaml
ausf-refactor/ausf-all/src/: CMakeLists.txt  main.cpp
ausf-refactor/ausf-genhxres/: Dockerfile  testCommand
ausf-refactor/ausf-genhxres/deployment/: 01_multus.yaml  02_deployment.yaml
ausf-refactor/ausf-genhxres/src/: CMakeLists.txt  main.cpp
ausf-refactor/ausf-kseaf/: Dockerfile
experiments/: 5g-sgx.ipynb
experiments/graphs/: graph-fall-gautn.py  initial-response.py  plot-ausf.py  plot-enclave_load.py  plot-enclave_load.py.bak  plot-ext-mod.py  plot-fall_gautn.py  plot-response-time.py  plot-udm.py  stable-response.py  test.txt
udm-refactor/udm-5gaka/: Dockerfile
udm-refactor/udm-annex/: Dockerfile
udm-refactor/udm-f1/: Dockerfile
udm-refactor/udm-f2345/: Dockerfile
udm-refactor/udm-f2345/src/: CMakeLists.txt  main.cpp
udm-refactor/udm-f2345/src/secu/: CMakeLists.txt  f2345.cpp  f2345.hpp  rijndael.cpp  udmhandlers.cpp  udmhandlers.hpp
udm-refactor/udm-fall-gautn/: Dockerfile
udm-refactor/udm-gautn/: Dockerfile  testCommand
udm-refactor/udm-kausf/: Dockerfile
(+182 files in other folders)
